[package]
name = "cached_token_info_oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rocket = { version = "0.5.1", features = ["json"] }
lazy_static = "1.5.0"
time = "0.3.36"


